--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 </section3>
 
 <section4>
-    <div class="button">
-        <button> Download Resume </button>
+    <div class="buttondiv">
+        <button class=buttonmain, style="height:28px;width:150px"> Download Resume</button>
     </div>
 </section4>
 
@@ -138,8 +138,8 @@
         <li>Bachelor of Arts in Psychology conveyed by Grove City College</li>
         <li>9 years of classical art lessons through Diane Betz Granger Art Studios</li>
     </ul>
-    <div class="button">
-        <button> View My Work </button>
+    <div class="buttondiv">
+        <button class= buttonmain, style="height:28px;width:150px"> View My Work </button>
     </div>
 </section7>
 
@@ -162,7 +162,8 @@
         <div class="PaletteText">
             <h10 Palette class="Palette11"> Palette</h10>
             <p9 class="Palette12">At present, the world lacks an app that may allow art patrons to access gallery information without extensive Google searches. Artists also lack access to information about multiple galleries in one space. Palette, a gallery finding app, was designed to connect artists, art patrons, and galleries to local happenings in the art space.</p9>
-            <button class="viewPalette" style="height:28px;width:100px"> View Project</button>
+            <button id=viewPalette1 class="viewPalette" style="height:28px;width:100px"> View Project</button>
+            <div class="appendMe"></div>
         </div>
         <img src="Images/Palette 1.jpg" alt="Palette" width="200" height="400" class="Palette1"></img>
     </div>
@@ -198,7 +199,8 @@
         </footer>
     </div>
 </section5>
-    
+    <script src="js/index.js"></script>  
+    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>  
 </body>
 </html>
     
