add in js file info
add js file info

--- a/index.html
+++ b/index.html
@@ -199,8 +199,9 @@
         </footer>
     </div>
 </section5>
-    <script src="js/index.js"></script>  
-    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>  
+ 
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="js/index.js"></script>
 </body>
 </html>
     
