--- a/index.html
+++ b/index.html
@@ -35,28 +35,13 @@
 
 <section2>
     <div class="headermain">
-        <h1 pageTopic> Sara Rios </h1>
-        <h2 sectionHead> UX/UI Designer</h2>
+        <h1 pageTopic> Sara Rios, UX-UI Designer </h1>
+
     </div>
     <div class="saraselfie">
-        <img src="Images/Grey Minimalist Simple Instagram Profile Picture 1.png" alt="Sara" class="saraselfie"> </img>
+        <img src="Images/Grey Minimalist Simple Instagram Profile Picture 1.png" height=300px width=300px alt="Sara" class="saraselfie"> </img>
     </div>
 </section2>
-
-
-<section3>
-    <div class="title1">
-        <h3 pageTopic1> Contact </h3>
-    </div>
-    <div class="contact">
-
-        <div class="inline-block"></div>
-    </div>
-    <div class="imageContact">
-        <img src="Images/Contact Card.jpg" alt="Contact Card" width="800" height="400"></img>
-    </div>
-</section3>
-
 <section4>
     <div class="buttondiv">
         <button class=buttonmain, style="height:28px;width:150px"> Download Resume</button>
@@ -65,7 +50,7 @@
 
 <section5>
     <div class="title2">
-        <h3 pageTopic1> Background </h3>
+
     </div>
     <div class="background">
         <div class="inline-block"></div>
@@ -87,6 +72,24 @@
        intersect. 
     </p1>
 </section5>
+
+
+<section3>
+    <div class="title1">
+
+    </div>
+    <div class="contact">
+
+        <div class="inline-block"></div>
+    </div>
+    <div class="imageContact">
+        <img src="Images/Contact Card.jpg" alt="Contact Card" width="500" height="250"></img>
+    </div>
+</section3>
+
+
+
+
 
 <section6>
     <div class="title3">
