fix work button
fix work button

--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
         <li>Bachelor of Arts in Psychology conveyed by Grove City College</li>
         <li>9 years of classical art lessons through Diane Betz Granger Art Studios</li>
     </ul>
-    <div class="buttondiv">
-        <button class= buttonmain, style="height:28px;width:150px"> View My Work </button>
+    <div class="buttondiv2">
+        <button class= buttonmain2, style="height:28px;width:150px"> View My Work </button>
     </div>
 </section7>
 
