--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         <li>9 years of classical art lessons through Diane Betz Granger Art Studios</li>
     </ul>
     <div class="buttondiv2">
-        <button class= buttonmain2, style="height:28px;width:150px"> View My Work </button>
+        <a href="https://saraerios.github.io/UX_UI_HW_20/index.html"> <button class= buttonmain2, style="height:28px;width:150px"> View My Work </button> </a>
     </div>
 </section7>
 
